# rustpass

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: crypto.rs  lib.rs  main.rs  model.rs  vault.rs
tests/: crypto.rs  vault.rs
