[package]
name = "rustpass"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
anyhow = "1.0"
directories = "5.0"
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rpassword = "7.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
shell-words = "1.1"
colored = "2.1"

[lib]
name = "rustpass"
path = "src/lib.rs"
